# ccost

./: .editorconfig  .gitattributes  CLAUDE.md  Cargo.toml  README.md  README.zh.md  ccost.html  cctokens.html  promotime.md  vbt.config.json
.github/workflows/: ci.yml  release.yml
npm/: README.md  install.js  package.json  run.js
scripts/: update-pricing.rs
src/: grouper.rs  lib.rs  main.rs  parser.rs  pricing.rs  types.rs  utils.rs
src/formatters/: chart.rs  csv.rs  html.rs  json.rs  markdown.rs  mod.rs  table.rs
src/sl/: aggregator.rs  formatter.rs  mod.rs  parser.rs  types.rs
tests/: cli_main.rs  cli_sl.rs  integration.rs  sl_aggregator.rs  sl_formatter.rs  sl_parser.rs
