[package]
name = "ccost"
version = "0.0.2"
edition = "2021"
description = "Analyze Claude Code token usage and costs from local conversation history"
license = "MIT"
repository = "https://github.com/toolsu/ccost"
authors = ["Tom Chen"]
keywords = ["claude", "token", "usage", "cost", "anthropic"]
categories = ["command-line-utilities"]
exclude = ["scripts/"]

[[bin]]
name = "ccost"
path = "src/main.rs"

[[bin]]
name = "update-pricing"
path = "scripts/update-pricing.rs"

[lib]
name = "ccost"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
dirs = "6"
regex = "1"
rayon = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
terminal_size = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
